Corrected num_total and temporal filter for Neurofinder
Corrected num_total: it should be no larger than the number of frames after temporal filtering.
Scaled the temporal filter for Neurofinder.
Changed the code to generate temporal filter of YST to from 4 < pSNR < 7

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ demo/FISSA
 *.asv
 *.txt
 demo/demo_train_pre.py
+paper reproduction/utils/temporal filter/*.mat
+paper reproduction/utils/temporal filter/*.h5
