revolked median subtraction

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ demo/FISSA
 demo/demo_train_pre.py
 paper reproduction/utils/temporal filter/*.mat
 paper reproduction/utils/temporal filter/*.h5
+paper reproduction/utils/temporal filter/temporal_filter_NF_all.m
