Added median subtraction and move median as options

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ demo/demo_train_pre.py
 paper reproduction/utils/temporal filter/*.mat
 paper reproduction/utils/temporal filter/*.h5
 paper reproduction/utils/temporal filter/temporal_filter_NF_all.m
+suns/run_suns copy.py
