--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ paper reproduction/utils/temporal filter/*.mat
 paper reproduction/utils/temporal filter/*.h5
 paper reproduction/utils/temporal filter/temporal_filter_NF_all.m
 suns/run_suns copy.py
+paper reproduction/ABO/demo_train_pre.py
+paper reproduction/ABO/pipeline_ABO.bat
