Fixed a bug causing computer crash
Fixed a bug causing computer crash when (1) the operation system is Windows, (2) the CPU is AMD, and (3) the lateral size of the video is a multiple of 256.
Added py-cpuinfo in installation package.

--- a/installation/environment_suns_test.yml
+++ b/installation/environment_suns_test.yml
@@ -364,4 +364,5 @@ dependencies:
     # - tensorflow-gpu==1.13.2
     - tensorflow==1.15.0
     - tensorflow-gpu==1.15.0
+    - py-cpuinfo
 prefix: C:\ProgramData\Anaconda3
