Added a demo with different video size. Automate the code more
* Added a demo that can take videos with different sizes in training.
* Reorganized demo folder
* Automatically save the wisdom files after running FFT planning if the files did not exist.
* Saved the active frames of the segmented neurons together with the final masks.
* Automatically reads the dataset name from the input h5 file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 demo/data/complete*
 demo/data float32
 demo/data/noSF*
-demo/wisdom
+demo/*/wisdom
 .vscode
 __pycache__
 demo/FISSA
 *.html
 *.asv
 *.txt
-demo/demo_train_pre.py
+demo/else/demo_train_pre.py
 paper reproduction/utils/temporal filter/*.mat
 paper reproduction/utils/temporal filter/*.h5
 paper reproduction/utils/temporal filter/temporal_filter_NF_all.m
@@ -18,3 +18,4 @@ paper reproduction/ABO/pipeline_ABO.bat
 *.lprof
 *.zip
 *.json
+*YST_full*
