--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ paper reproduction/utils/temporal filter/temporal_filter_NF_all.m
 suns/run_suns copy.py
 paper reproduction/ABO/demo_train_pre.py
 paper reproduction/ABO/pipeline_ABO.bat
+paper reproduction/*
 *.lprof
 *.zip
 *.json
