Updated installation guide

--- a/installation/environment_suns_tf2.yml
+++ b/installation/environment_suns_tf2.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.7.8
+  - python=3.9
   - pip
   - numpy
   - h5py
@@ -14,11 +14,11 @@ dependencies:
   - scikit-learn
   - scipy
   - shapely 
-  # - tensorflow ==2.1
-  - tensorflow-gpu ==2.1
+  # - tensorflow ==2.6
+  - tensorflow-gpu ==2.6
   - keras
   - pip:
     - fissa==0.7.2
     - pyfftw
-    - tensorflow-estimator==2.1
+    # - tensorflow-estimator==2.2
     - py-cpuinfo
